Implement Plato management module, including REST endpoints, services, and repositories, and update API documentation