@@ -4,6 +4,7 @@ import com.ucompensar.platostipicossbapi.entity.Plato;
 import lombok.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -11,6 +12,7 @@ import java.util.List;
 @AllArgsConstructor
 @Builder
 public class PlatoDto {
+
     private Long id;
     private String nombre;
     private int porciones;
@@ -19,33 +21,20 @@ public class PlatoDto {
     private String datoCurioso;
     private String historia;
     private String descripcion;
-    private UsuarioDto usuario;
-    private CategoriaDto categoria;
-    private DepartamentoDto departamento;
+    
+    private Long categoriaId;
+    private String categoriaNombre;
+    
+    private Long departamentoId;
+    private String departamentoNombre;
+    
+    private Long usuarioId;
+    private String usuarioNombre;
+
     private List<IngredienteDto> ingredientes;
-    private List<ComentarioDto> comentarios;
     private List<GaleriaDto> galeria;
 
-
     public static PlatoDto toDto(Plato plato) {
-        if (plato.getComentarios() == null){
-            // Plato sin comentarios, al actualizar o crear
-            return PlatoDto.builder()
-                    .id(plato.getId())
-                    .nombre(plato.getNombre())
-                    .porciones(plato.getPorciones())
-                    .destacado(plato.isDestacado())
-                    .tiempoPreparacion(plato.getTiempoPreparacion())
-                    .datoCurioso(plato.getDatoCurioso())
-                    .historia(plato.getHistoria())
-                    .descripcion(plato.getDescripcion())
-                    .departamento(DepartamentoDto.toDto(plato.getDepartamento()))
-                    .categoria(CategoriaDto.toDto(plato.getCategoria()))
-                    .ingredientes(plato.getIngredientes().stream().map(IngredienteDto::toDto).toList())
-                    .galeria(plato.getGaleria().stream().map(GaleriaDto::toDto).toList())
-                    .build();
-        }
-
         return PlatoDto.builder()
                 .id(plato.getId())
                 .nombre(plato.getNombre())
@@ -55,11 +44,16 @@ public class PlatoDto {
                 .datoCurioso(plato.getDatoCurioso())
                 .historia(plato.getHistoria())
                 .descripcion(plato.getDescripcion())
-                .departamento(DepartamentoDto.toDto(plato.getDepartamento()))
-                .categoria(CategoriaDto.toDto(plato.getCategoria()))
-                .ingredientes(plato.getIngredientes().stream().map(IngredienteDto::toDto).toList())
-                .comentarios(plato.getComentarios().stream().map(ComentarioDto::toDto).toList())
-                .galeria(plato.getGaleria().stream().map(GaleriaDto::toDto).toList())
+                .categoriaId(plato.getCategoria().getId())
+                .categoriaNombre(plato.getCategoria().getNombre())
+                .departamentoId(plato.getDepartamento().getId())
+                .departamentoNombre(plato.getDepartamento().getNombre())
+                .usuarioId(plato.getUsuario().getId())
+                .usuarioNombre(plato.getUsuario().getNombre())
+                .ingredientes(plato.getIngredientes() != null ? 
+                        plato.getIngredientes().stream().map(IngredienteDto::toDto).collect(Collectors.toList()) : null)
+                .galeria(plato.getGaleria() != null ? 
+                        plato.getGaleria().stream().map(GaleriaDto::toDto).collect(Collectors.toList()) : null)
                 .build();
     }
 }
